2004-06-15  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkCanvas.c: Make tag search subsystem use symbolic names
	for type flags for easier maintenance.

2004-06-12  Anton Kovalenko <a_kovalenko@users.sourceforge.net>

	* win/tkWinWm.c (UpdateWrapper): Let overrideredirect'ed window's
	wrapper be the child of desktop window, thus making it to behave more
	similarly to X11 Override Redirect. Esp. useful for combobox-like
	megawidgets.

2004-06-09  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkText.c: 
	* tests/text.test: fix to multi-line regexp search bugs in text
	widget (reported against Alphatk editor, not on sf).  
	Addded 3 new tests.

2004-06-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkUndo.c (TkUndoSetDepth): Delete the unlinked element and
	not the next element.  Stops a crash in some situations and a memory
	leak in others. Thanks to Jiang Wu for spotting this. [Bug 969358]

2004-06-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkCanvText.c (DisplayCanvText): Fix text
	rendering problem with canvas text items that
	have a selected region. The previous implementation
	would render the whole line and then redraw the
	selected text if it was a different color. This caused
	problems when the selected text foreground differs
	from the normal text foreground, the anti-aliasing
	alpha pixels for the two text strings would blend
	together resulting in strange looking text. The
	fix is to draw the normal text and the selected text
	separately. This problem has only been observed
	under Windows, with anti-aliased text. [Patch 968725]

2004-06-07  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c: 
	* generic/tkTextBTree.c: fix to (Bug 965186) in which the text
	widget's record of partial-line-height calculations (for very
	long wrapped lines) was being incorrectly reused.  This resulted
	in confusing scrollbar-text interactions.
